[workspace]
members = ["amitu"]
resolver = "2"

[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2024"
repository = "https://github.com/amitu/spatial"
homepage = "https://amitu.com"
rust-version = "1.92"

[workspace.dependencies]
fastn = { path = "../../spatial/fastn" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
