[workspace]
members = ["amitu"]
resolver = "2"

[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2024"
repository = "https://github.com/amitu/spatial"
homepage = "https://amitu.com"
rust-version = "1.92"

[workspace.dependencies]
fastn = { path = "../../spatial/fastn" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dependencies needed by fastn-shell (pulled in via fastn -> fastn-cli -> fastn-shell)
wgpu = { version = "27.0", features = ["webgl"] }
winit = "0.30"
gltf = "1.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.30"
wasmtime = "29"
pollster = "0.4"
env_logger = "0.11"
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[profile.release]
strip = true
